# ProyectoFinal_POO

./: CMakeLists.txt  main.cpp
Alan/: EmpleadoView.h
Equipo/: CMakeLists.txt  pruebasProyecto.cpp
Equipo/empleado/: Empleado.h
Equipo/pedidos/: Pedido.h  PedidosView.h  Producto.h
Equipo/proveedor/: Proveedor.h
Fernando/: PedidosManager.h
empleado/: EmpleadoView.h  RecursosHumanosManager.h
pedidos/: Pedido.h  PedidosManager.h  PedidosView.h  Producto.h
proveedor/: Inventario.h  Proveedor.h
